# jumpy

./: .gitignore  Cargo.toml  revert-linux-permissions.sh  setup-linux-permissions.sh  trusted_hosts.json
jumpy-core/: Cargo.toml
jumpy-core/src/: app.rs  lib.rs  network.rs  platform.rs  ui.rs
jumpy-linux/: Cargo.toml
jumpy-linux/src/: main.rs
jumpy-windows/: Cargo.toml  trusted_hosts.json
jumpy-windows/src/: main.rs
src/: main.rs
