[package]
name = "jumpy"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
eframe = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }
local-ip-address = "0.6.1"
socket2 = "0.5.5"
