[package]
name = "jumpy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
eframe = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.6.1"
socket2 = { version = "0.5", features = ["all"] }
egui_extras = { version = "0.28.1", features = ["image"] }
image = { version = "0.25", features = ["png"] }
